test/cases/__label__/duplicate_nested.c
// RUN: %check -e %s

f()
{
  l:

  {
    __label__ l;
l:; // CHECK: !/error/
  }

  {
l:; // CHECK: error: duplicate label 'l'
  }
}
